Bug 31077 - [Qt] ASSERT failure when receiving 401 HTTP Authentication response.
Summary: [Qt] ASSERT failure when receiving 401 HTTP Authentication response.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Page Loading (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Linux
: P2 Normal
Assignee: Yael
URL:
Keywords: Qt
Depends on:
Blocks: Qt46
  Show dependency treegraph
 
Reported: 2009-11-03 12:12 PST by Yael
Modified: 2009-11-17 05:37 PST (History)
3 users (show)

See Also:


Attachments
Patch (1.24 KB, patch)
2009-11-03 14:16 PST, Yael
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Yael 2009-11-03 12:12:29 PST
QNetworkReplyHandler::sendResponseIfNeeded() does not send the response for any error situation, but QNetworkReplyHandler::finish() calls client->didFinishLoading() for some error conditions. That leads to  ASSERT(!m_response.isNull()) ,  in MainResourceLoader::didReceiveData().

If we decide to handle the error response as if there was no error, we should also send the response to the client in sendResponseIfNeeded().
Comment 1 Yael 2009-11-03 14:16:16 PST
Created attachment 42417 [details]
Patch

This patch is only handling the ASSERT. HTTP auth support would be a separate bug.
Comment 2 WebKit Commit Bot 2009-11-04 09:09:01 PST
Comment on attachment 42417 [details]
Patch

Clearing flags on attachment: 42417

Committed r50514: <http://trac.webkit.org/changeset/50514>
Comment 3 WebKit Commit Bot 2009-11-04 09:09:07 PST
All reviewed patches have been landed.  Closing bug.
Comment 4 Kenneth Rohde Christiansen 2009-11-09 06:42:26 PST
Did this patch fix any layout tests? Or should we add one?