2009-11-04  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Tor Arne Vestbø.

        [Qt] ASSERT failure when receiving 401 HTTP Authentication response.
        https://bugs.webkit.org/show_bug.cgi?id=31077

        Allow sending the response body under the same conditions that we
        allow it to finish without reporting an error.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::sendResponseIfNeeded):

Canonical link: https://commits.webkit.org/41944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50514 268f45cc-cd09-0410-ab3c-d52691b4dbfc